# simint-generator

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README  constants.h  create.py  gen-scalar.sh  gen.sh  generate_twoel.py  shell.h  vectorization.h
boys/: CMakeLists.txt  boys.c  boys.c.old  boys.h  boys_FO.h  boys_cheby.c  boys_cheby.h  boys_grid.c  boys_grid.h  boys_long.h  boys_longfac.c  boys_longfac.h  boys_param.h  boys_shortgrid.c  boys_shortgrid.h  boys_split.h  boys_taylor.h  boys_taylorgrid.c  boys_taylorgrid.h  boys_vref.c  boys_vref.h  boysgen_longfac.py  boysgen_shortgrid.py  boysgen_taylor.py
boys/dat/: generate_FO.py
boys/python/: boys_cheby_nonlin.py  boys_cheby_plot.py  boys_plot.py  boysgen_cheby.py  boysgen_longfac.py  boysgen_shortgrid.py
eri/: .shell.c.swp  CMakeLists.txt  eri.c  eri.h  eri_FOcombined.c  eri_FOcombined_psss.c  eri_cheby.c  eri_combined.c  eri_erf.c  eri_erf_combined.c  eri_erf_split.c  eri_split.c  eri_splitcombined.c  eri_ssss.c  eri_ssss_cheby.c  eri_ssss_combined.c  eri_ssss_split.c  eri_ssss_taylor.c  eri_ssss_taylorcombined.c  eri_taylor.c  eri_taylorcombined.c  shell.c  shell.h  shell_constants.c  shell_constants.h  shellgen_constants.py  vrrvrr.cpp
eri/FOcombined/: eri_FOcombined.h  eri_FOcombined_dpdp.c  eri_FOcombined_dpss.c  eri_FOcombined_dsds.c  eri_FOcombined_dspp.c  eri_FOcombined_dsps.c  eri_FOcombined_dsss.c  eri_FOcombined_ppds.c  eri_FOcombined_pppp.c  eri_FOcombined_ppps.c  eri_FOcombined_ppss.c  eri_FOcombined_psps.c  eri_FOcombined_psss.c  eri_FOcombined_spss.c  eri_FOcombined_ssps.c  eri_FOcombined_sssp.c  eri_FOcombined_ssss.c
eri/hrr/: hrr.h  hrr_bra.c  hrr_ket.c
eri/split/: eri_split.h  eri_split_d_d_d_d.c  eri_split_d_d_d_p.c  eri_split_d_d_d_s.c  eri_split_d_d_p_p.c  eri_split_d_d_p_s.c  eri_split_d_d_s_s.c  eri_split_d_p_d_p.c  eri_split_d_p_d_s.c  eri_split_d_p_p_p.c  eri_split_d_p_p_s.c  eri_split_d_p_s_s.c  eri_split_d_s_d_s.c  eri_split_d_s_p_p.c  eri_split_d_s_p_s.c  eri_split_d_s_s_s.c  eri_split_p_p_p_p.c  eri_split_p_p_p_s.c  eri_split_p_p_s_s.c  eri_split_p_s_p_s.c  eri_split_p_s_s_s.c  eri_split_s_s_s_s.c
eri/vrr/: vrr.c  vrr.h
generator/: AlgorithmBase.cpp  AlgorithmBase.h  AlgorithmBase.hpp  Algorithms.h  Algorithms.hpp  Boys.cpp  Boys.hpp  BoysGenerator.cpp  BoysGenerator.hpp  BoysGenerator_FO.cpp  BoysGenerator_split.cpp  Boys_FO.cpp  Boys_split.cpp  CMakeLists.txt  Classes.cpp  Classes.h  Classes.hpp  CommandLine.cpp  CommandLine.hpp  Create.cpp  Create.hpp  Create_Looped.bak.cpp  Create_Looped.cpp  Create_Unrolled.bak.cpp  Create_Unrolled.cpp  ERIGeneratorInfo.cpp  ERIGeneratorInfo.hpp  ERIWriter.cpp  ERIWriter.hpp  ERI_ET_Algorithm_Base.cpp  ERI_ET_Algorithm_Base.hpp  ERI_ET_Writer.cpp  ERI_ET_Writer.hpp  ERI_HRR_Algorithm_Base.cpp  ERI_HRR_Algorithm_Base.hpp  ERI_HRR_Writer.cpp  ERI_HRR_Writer.hpp  ERI_VRR_Algorithm_Base.cpp  ERI_VRR_Algorithm_Base.hpp  ERI_VRR_Writer.cpp  (+69 more)
generator/dat/: filelist  generate_standalone.py
generator/eri/: Algorithms.hpp  CMakeLists.txt  ERIGeneratorInfo.hpp  ERITypes.hpp  ERI_ET_Algorithm_Base.cpp  ERI_ET_Algorithm_Base.hpp  ERI_ET_Writer.cpp  ERI_ET_Writer.hpp  ERI_HRR_Algorithm_Base.cpp  ERI_HRR_Algorithm_Base.hpp  ERI_HRR_Writer.cpp  ERI_HRR_Writer.hpp  ERI_VRR_Algorithm_Base.cpp  ERI_VRR_Algorithm_Base.hpp  ERI_VRR_Writer.cpp  ERI_VRR_Writer.hpp  ERI_Writer.cpp  ERI_Writer.hpp  Makowski.hpp  eri_et_generator.cpp  eri_generator.cpp  eri_hrr_generator.cpp  eri_vrr_generator.cpp
generator/ostei/: Algorithms.hpp  CMakeLists.txt  Makowski.hpp  OSTEIDeriv1_Writer.cpp  OSTEIDeriv1_Writer_Basic.cpp  OSTEIDeriv1_Writer_Basic.cpp.old  OSTEI_ET_Algorithm_Base.hpp  OSTEI_ET_Writer.hpp  OSTEI_GeneratorInfo.hpp  OSTEI_HRR_Algorithm_Base.cpp  OSTEI_HRR_Algorithm_Base.hpp  OSTEI_HRR_Writer.cpp  OSTEI_HRR_Writer.hpp  OSTEI_Types.hpp  OSTEI_VRR_Algorithm_Base.cpp  OSTEI_VRR_Algorithm_Base.hpp  OSTEI_VRR_Writer.cpp  OSTEI_VRR_Writer.hpp  OSTEI_Writer.cpp  OSTEI_Writer.hpp  OSTEI_Writer_Base.cpp  OSTEI_Writer_Basic.cpp  ostei_deriv1_generator.cpp  ostei_et_generator.cpp  ostei_generator.cpp  ostei_hrr_generator.cpp  ostei_vrr_generator.cpp
generator/python/: T  generate.py
generator/twogen/: Doublet.py  Gaussian.py  HRRStep.py  Helpers.py  Makowski.py  Quartet.py  __init__.py
liberd/: CMakeLists.txt  erd__prepare_ctr.f  erd_interface.c  erd_interface.h
skel/: CHANGELOG  CMakeLists.txt  LICENSE  README  ostei_s_s_s_s.c  simintConfig.cmake.in  simint_init.c  simint_init.h
skel/boys/: CMakeLists.txt  boys.c  boys.h  boys_cheby.h  boys_long.h  boys_split.h  boys_taylor.h  boys_vref.c
skel/cmake/: DefaultFlags.cmake  DefaultFlags_asimd.cmake  DefaultFlags_avx.cmake  DefaultFlags_avx2.cmake  DefaultFlags_avx512.cmake  DefaultFlags_avxfma.cmake  DefaultFlags_commonavx512.cmake  DefaultFlags_generated.cmake  DefaultFlags_micavx512.cmake  DefaultFlags_scalar.cmake  DefaultFlags_sse.cmake  DefaultFlags_sve.cmake  simintConfig.cmake.in
skel/eri/: CMakeLists.txt  eri.h  eri_init.c  eri_init.h
skel/examples/: CMakeLists.txt  example1.c  example_packed.c  example_water_ppps_deriv.c  example_water_spsp.c  example_water_spsp.f90
skel/shell/: CMakeLists.txt  shell.c  shell.h  shellgen_constants.py
skel/simint/: CMakeLists.txt  LICENSE  constants.h  cpp_restrict.hpp  recur_lookup.c  simint.f90  simint.h  simint_eri.c  simint_eri.h  simint_init.c  simint_init.h  simint_oneelectron.c  simint_oneelectron.h
skel/test/: CMakeCache.txt  CMakeLists.txt  Common.cpp  Common.hpp  ERD.cpp  ERD.hpp  Libint2.cpp  Libint2.hpp  Libint2_scalar.cpp  Libint2_simd.cpp  Makefile  Simint.cpp  Simint.hpp  Timer.h  ValeevRef.cpp  ValeevRef.hpp  (+23 more)
test/: CMakeLists.txt  ERD.cpp  ERD.hpp  Libint2.cpp  Libint2.hpp  benchmark_FO.cpp  benchmark_FO_flat.cpp  benchmark_erd.cpp  benchmark_eri.c  benchmark_eri.cpp  benchmark_f.cpp  boysmax.c  common.cpp  common.hpp  compare_eri.c  compare_eri.cpp  compare_f.c  compare_f.c.old  compare_f.cpp  cppvectorization.hpp  erd_interface.cpp  erd_interface.hpp  gen_ref.cpp  test_eri.cpp  test_f.cpp  test_norm.c  timer.hpp  valeev.cpp  valeev.hpp
(+212 files in other folders)
